Sun May  1 23:51:54 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/lib/test/unit.rb (Options#non_options): fixed wrong regexp.
	  if both positives and negatives were specified, postives had to
	  be spcicifed from the beginning.

Sun May  1 21:00:07 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c: drop Win2K support.

Sun May  1 20:39:47 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c, hash.c, random.c, win32/win32.c: cleanup some Win9x/ME/NT4
	  support leftovers.
	  [fix GH-1328] patched by @cremno

Sun May  1 07:30:44 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (search_nonascii): use nlz on big endian environments.

	* internal.h (nlz_intpr): defined.

Sun May  1 00:03:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (__builtin_ctz): check.

	* configure.in (__builtin_ctzll): check.

	* internal.h (rb_popcount32): defined for ntz_int32.
	  it can use __builtin_popcount but this function is not used on
	  GCC environment because it uses __builtin_ctz.
	  When another function uses this, using __builtin_popcount
	  should be re-considered.

	* internal.h (rb_popcount64): ditto.

	* internal.h (ntz_int32): defined for ntz_intptr.

	* internal.h (ntz_int64): defined for ntz_intptr.

	* internal.h (ntz_intptr): defined as ntz for uintptr_t.

	* string.c (search_nonascii): unroll and use ntz.

Sat Apr 30 21:54:13 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (Init_Numeric): Gather Fixnum method definitions.

Sat Apr 30 21:28:14 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_div): Define Integer#/.

	* bignum.c (rb_big_div): Don't define Bignum#/.

	* lib/mathn.rb (Integer#/): Replace Integer#/ instead of Bignum#/.

Sat Apr 30 21:11:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_plus): Define Integer#+.

	* bignum.c (rb_big_plus): Don't define Bignum#+.

Sat Apr 30 21:01:20 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_minus): Define Integer#-.
