@@ -2789,6 +2789,10 @@ class TestArray < Test::Unit::TestCase
 
     assert_equal("abc", ["a", "b", "c"].sum(""))
     assert_equal([1, [2], 3], [[1], [[2]], [3]].sum([]))
+
+    assert_separately(%w[-rmathn], <<-EOS, ignore_stderr: true)
+      assert_equal(6, [1r, 2, 3r].sum)
+    EOS
   end
 
   private
